[package]
name = "add-item"
version = "0.1.0"
authors = ["Gary Sheppard"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.1"
reqwest = { version = "0.10", features = ["json"] }
rpassword = "4.0.3"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
