[package]
name = "quarenta"
version = "0.1.0"
authors = ["Gary Sheppard"]
edition = "2018"
description = "ArcGIS REST library for Rust"
license = "Apache-2.0"
repository = "https://github.com/garysheppardjr/arcgis-rest-demos"
keywords = ["ArcGIS", "GIS", "geospatial", "Esri", "geo"]
categories = ["api-bindings", "science"]

[dependencies]
json = "0.12.1"
reqwest = { version = "0.10.4", features = ["json"] }
