[package]
name = "wanderer"
version = "0.1.0"
authors = ["Gary Sheppard"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.12.2"
json = "0.12.1"
quarenta = "0.1.0"
rand = "0.7.3"
reqwest = { version = "0.10", features = ["json"] }
rpassword = "4.0.3"
serde = { version = "1.0", features = ["derive"] }
strfmt = "0.1.6"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
